# new_admin_panel_sprint_3

./: .env.example  .gitignore  docker-compose.yml  pg_dump.sql  pyproject.toml
etl/: Dockerfile
etl/postgres_to_es/: data_transformer.py  es_loader.py  main.py  pg_extractor.py  redis_storage.py
etl/postgres_to_es/config/: es_schema.py  logger.py  settings.py
etl/postgres_to_es/db/: base.py  pg_connector.py  pg_extractor.py
etl/postgres_to_es/models/: models.py
etl/postgres_to_es/queries/: sql_queries.py
postman_tests/: docker-compose.yml  environment.json  etl_tests.json
